<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings_menu"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/action_settings_label"/>
    <item
        android:id="@+id/toogle_sound_menu"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/toggle_sound_on_label"/>
    <item
        android:id="@+id/about_menu"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/about_label"/>
    <item
        android:id="@+id/help_menu"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/help_label"/>

</menu>