<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dip">

    <TextView
        android:text="@string/game_title"
        android:textColor="@color/colorWhite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24.5sp"
        />

    <!--<Button
        android:id="@+id/continue_button"
        android:text="@string/continue_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />-->

    <Button
        android:id="@+id/new_game_button"
        android:text="@string/new_game_label"
        android:layout_width="fill_parent"
        android:layout_margin="5dp"
        android:textColor="@color/colorWhite"
        android:background="@color/button_color"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/new_game_button_android"
        android:text="@string/new_game_label_android"
        android:layout_width="fill_parent"
        android:layout_margin="5dp"
        android:textColor="@color/colorWhite"
        android:background="@color/button_color"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_margin="5dp"
        android:id="@+id/help_button"
        android:text="@string/help_label"
        android:textColor="@color/colorWhite"
        android:background="@color/button_color"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/about_button"
        android:text="@string/about_label"
        android:layout_margin="5dp"
        android:textColor="@color/colorWhite"
        android:background="@color/button_color"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_margin="5dp"
        android:id="@+id/exit_button"
        android:text="@string/exit_label"
        android:textColor="@color/colorWhite"
        android:background="@color/button_color"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

<ImageButton
    android:id="@+id/share_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/share"
    android:background="@color/colorPrimary"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="150dp"/>


</LinearLayout>