<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/help_howtoplay_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/howtoplay_title"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/help_howtoplay_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_shape"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:text="@string/howtoplay_Content" />

        <TextView
            android:id="@+id/settings_help_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:text="@string/settings_help_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_help_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_shape"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:text="@string/settings_help_content" />

    </LinearLayout>

</ScrollView>